--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "slackbot-docbase",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/src/index.js",
   "repository": "git@github.com:mazrica/slackbot-docbase.git",
   "author": "erukiti - Shunsuke Sasaki <shunsuke.sasaki@mazrica.com>",
   "license": "MIT",
@@ -13,5 +13,8 @@
     "ts-node": "^8.10.2",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.6"
+  },
+  "scripts": {
+    "build": "tsc --outDir dist"
   }
 }
